# dialign-ss-anchor

./: CMakeLists.txt  Makefile  aacodes.hh  align.cc  align.hh  blosum.hh  convert_blosum.py  debug.hh  formats.hh  ipssp2vformat.py  msf2fasta.py  multi_align.py  psipred.py  run-adjust-anchors-all.sh  run-adjust-anchors.sh  run-baliscore-all.sh  run-baliscore.sh  run-dialign-tx-all.sh  run-dialign-tx.sh  run-dialign.sh  run-ssanchor-all.sh  run-ssanchor.sh  test_blosum.cc  ungap.py
rep/: Makefile  lit.bib  report.Rnw
ssanchor/: CMakeLists.txt  Makefile  aacodes.hh  align.cc  align.hh  debug.hh  formats.hh  score.hh  sov.hh  test_blosum.cc  test_sov.cc
